SERVER-32631 Deduplicate results in SockAddr::createAll()

(cherry picked from commit 62c9eedec658912f796f5bcdb25f57891e4069ca)
(cherry picked from commit 22f10748b1561f55cd053c9a1b3aba00b83adfc9)