src/mongo/util/net/sockaddr.h
@@ -136,9 +136,7 @@ struct SockAddr {
     bool isAnonymousUNIXSocket() const;
 
     bool operator==(const SockAddr& r) const;
-
     bool operator!=(const SockAddr& r) const;
-
     bool operator<(const SockAddr& r) const;
 
     const sockaddr* raw() const {
